--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
-      <h1 class="logo">BLOCK</h1>
+      <a href="#"><h1 class="logo">BLOCK</h1></a>
       <input type="checkbox" id="nav-toggle" class="nav-toggle" />
       <nav>
         <ul>
@@ -29,10 +36,10 @@
 
     <div class="section" id="firstSection">
       <div class="slider">
-        <div class="container slidercontent">
-          <h1 class="hero">BLOCK SALON</h1>
+        <div class="flexcenter">
+          <h1 class="hero">BLOCK salon & barber shop</h1>
 
-          <button class="reserve">
+          <button class="btn btn-primary">
             <span>Időpontfoglalás</span>
           </button>
         </div>
@@ -105,7 +112,7 @@
       <div class="footer">
         <div class="container white">
           <div class="footer-text-container">
-            <h1>BLOCK BARBER SALON</h1>
+            <h1>Block salon & barber shop</h1>
           </div>
           <div class="footer-text-container">
             <div class="gmap_canvas">
