--- a/prices.html
+++ b/prices.html
@@ -15,7 +15,7 @@
         <ul>
           <li><a href="#">Borbélyaink</a></li>
           <li><a href="#">Kapcsolat</a></li>
-          <li><a href="prices.html">Árlista</a></li>
+          <li><a href="#">Árlista</a></li>
           <li><a href="#">Galéria</a></li>
         </ul>
       </nav>
@@ -24,70 +24,12 @@
       </label>
     </header>
     <div class="main-image-container">
-      <img class="header-image" src="images/main2.jpg" alt="" />
+      <img class="header-image" src="" alt="" />
     </div>
 
-    <div class="section" id="firstSection">
+    <div class="section" id="firstSection-price">
       <div class="flexcenter">
-        <h1 class="hero">BLOCK salon & barber shop</h1>
-      </div>
-      <div class="flexcenter">
-        <a href="https://n634317.yclients.com/">
-          <button class="btn btn-primary">
-            <span>Időpontfoglalás</span>
-          </button>
-        </a>
-      </div>
-    </div>
-
-    <div id="workers" class="section">
-      <div class="container">
-        <h1 id="barbers">Borbélyaink</h1>
-        <div class="col three">
-          <div class="pictureholder">
-            <img class="profilepictures" src="" alt="" />
-          </div>
-          <h1 class="feature side">Veres Norbert</h1>
-          <p class="side">Mesterfodrász</p>
-          <div class="buttonholder">
-            <a href="https://n634317.yclients.com/">
-              <button class="reserve small">
-                <span>Időpontfoglalás</span>
-              </button>
-            </a>
-          </div>
-        </div>
-        <div class="separator"></div>
-        <div class="col three">
-          <div class="pictureholder">
-            <img class="profilepictures" src="" alt="" />
-          </div>
-
-          <h1 class="feature side">Veres Norbert</h1>
-          <p class="side">Mesterfodrász</p>
-          <div class="buttonholder">
-            <a href="https://n634317.yclients.com/">
-              <button class="reserve small">
-                <span>Időpontfoglalás</span>
-              </button>
-            </a>
-          </div>
-        </div>
-        <div class="group margin"></div>
-        <div class="group margin"></div>
-      </div>
-    </div>
-    <div id="connect" class="section bg">
-      <div class="container">
-        <h1>Kapcsolat</h1>
-        <div id="connection-design">
-          <div class="flexcenter">
-            <h2>+36703142189</h2>
-          </div>
-          <div class="flexcenter">
-            <h2>norbert.veres08@gmail.com</h2>
-          </div>
-        </div>
+        <img class="priceImg" src="Norbi árlistaaa-1.png" alt="" />
       </div>
     </div>
     <div class="section">
