--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
       </label>
     </header>
     <div class="main-image-container">
-      <img class="header-image" src="images/main2.jpg" alt="" />
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <img src="images/image1.jpg" style="width: 100%" />
+        </div>
+
+        <div class="mySlides fade">
+          <img src="images/image2.jpg" style="width: 100%" />
+        </div>
+
+        <div class="mySlides fade">
+          <img src="images/image3.jpg" style="width: 100%" />
+        </div>
+      </div>
     </div>
 
     <div class="section" id="firstSection">
