--- a/galery.html
+++ b/galery.html
@@ -6,6 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+      div.gallery {
+        border: 1px solid #ccc;
+      }
+
+      div.gallery:hover {
+        border: 1px solid #777;
+      }
+
+      div.gallery img {
+        width: 100%;
+        height: auto;
+      }
+
+      div.desc {
+        padding: 15px;
+        text-align: center;
+      }
+
+      * {
+        box-sizing: border-box;
+      }
+
+      .responsive {
+        padding: 0 6px;
+        float: left;
+        width: 24.99999%;
+      }
+
+      @media only screen and (max-width: 700px) {
+        .responsive {
+          width: 49.99999%;
+          margin: 6px 0;
+        }
+      }
+
+      @media only screen and (max-width: 500px) {
+        .responsive {
+          width: 100%;
+        }
+      }
+
+      .clearfix:after {
+        content: "";
+        display: table;
+        clear: both;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -28,43 +76,57 @@
         <span></span>
       </label>
     </header>
-    <div class="section" id="firstSection-price">
-      <div class="container">
-        <div class="grid-container">
-          <div class="service-name"><h2>A hajvágás</h2></div>
-          <div class="service-price"><h2>4000 Ft</h2></div>
-          <div class="service-name"><h2>Egyhossz gépi hajvágás</h2></div>
-          <div class="service-price"><h2>2500 Ft</h2></div>
-          <div class="service-name">
-            <h2>Gyerek hajvágás(10 éves korig)</h2>
-          </div>
-          <div class="service-price"><h2>3000 Ft</h2></div>
-          <div class="service-name">
-            <h2>Hajvágás + szakáll igazítás géppel</h2>
-          </div>
-          <div class="service-price"><h2>5700 Ft</h2></div>
-          <div class="service-name">
-            <h2>Hajvágás + szakáll igazítás géppel, pengével</h2>
-          </div>
-          <div class="service-price"><h2>6200 Ft</h2></div>
-          <div class="service-name">
-            <h2>Hajvágás + szakáll igazítás géppel + szakáll festés</h2>
-          </div>
-          <div class="service-price"><h2>7500 Ft</h2></div>
-          <div class="service-name">
-            <h2>Egyhossz hajvágás + szakáll igazítás géppel, pengével</h2>
-          </div>
-          <div class="service-price"><h2>4800 Ft</h2></div>
-          <div class="service-name"><h2>Szakáll igazítás géppel</h2></div>
-          <div class="service-price"><h2>2000 Ft</h2></div>
-          <div class="service-name">
-            <h2>Szakáll igazítás géppel, pengével</h2>
-          </div>
-          <div class="service-price"><h2>2800 Ft</h2></div>
-          <div class="service-name"><h2>Őszfedés</h2></div>
-          <div class="service-price"><h2>2800 Ft</h2></div>
+    <div class="section" id="galery-section">
+      <div class="responsive">
+        <div class="gallery">
+          <a target="_blank" href="images/main.jpg">
+            <img
+              src="images/main.jpg"
+              alt="Northern Lights"
+              width="600"
+              height="400"
+            />
+          </a>
         </div>
       </div>
+      <div class="responsive">
+        <div class="gallery">
+          <a target="_blank" href="images/image4.jpg">
+            <img
+              src="images/image4.jpg"
+              alt="Cinque Terre"
+              width="600"
+              height="400"
+            />
+          </a>
+        </div>
+      </div>
+      <div class="responsive">
+        <div class="gallery">
+          <a target="_blank" href="images/main2.jpg">
+            <img
+              src="images/main2.jpg"
+              alt="Northern Lights"
+              width="600"
+              height="400"
+            />
+          </a>
+        </div>
+      </div>
+      <div class="responsive">
+        <div class="gallery">
+          <a target="_blank" href="images/image2.jpg">
+            <img
+              src="images/image2.jpg"
+              alt="Mountains"
+              width="600"
+              height="400"
+            />
+          </a>
+        </div>
+      </div>
+
+      <div class="clearfix"></div>
     </div>
     <div class="section">
       <div class="footer">
