--- a/prices.html
+++ b/prices.html
@@ -20,8 +20,8 @@
         <ul>
           <li id="workers"><a href="index.html#barbers">Borbélyaink</a></li>
           <li id="connection"><a href="index.html#connect">Kapcsolat</a></li>
-          <li><a href="prices.html">Árlista</a></li>
-          <li><a href="galery.html">Galéria</a></li>
+          <li><a href="/prices">Árlista</a></li>
+          <li><a href="/galery">Galéria</a></li>
         </ul>
       </nav>
       <label for="nav-toggle" class="nav-toggle-label">
