galery href update

--- a/galery.html
+++ b/galery.html
@@ -66,8 +66,8 @@
       <input type="checkbox" id="nav-toggle" class="nav-toggle" />
       <nav>
         <ul>
-          <li id="workers"><a href="index/#barbers">Borbélyaink</a></li>
-          <li id="connection"><a href="index/#connect">Kapcsolat</a></li>
+          <li id="workers"><a href="index.html#barbers">Borbélyaink</a></li>
+          <li id="connection"><a href="index.html#connect">Kapcsolat</a></li>
           <li><a href="/prices">Árlista</a></li>
           <li><a href="/galery">Galéria</a></li>
         </ul>
