--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
         <h1 id="barbers" name="barbers">Borbélyaink</h1>
         <div class="worker-container">
           <div class="pictureholder">
-            <img class="profilepictures" src="images/main2.jpg" alt="" />
+            <img
+              class="profilepictures"
+              src="images/Dominik-removebg-preview.png"
+              alt=""
+            />
           </div>
-          <h1 class="feature side">Veres Norbert</h1>
+          <h1 class="feature side">Dominik</h1>
           <p class="side">Mesterfodrász</p>
           <div class="buttonholder">
             <a href="https://n634317.yclients.com/">
@@ -77,10 +81,33 @@
         <div class="separator"></div>
         <div class="worker-container">
           <div class="pictureholder">
-            <img class="profilepictures" src="" alt="" />
+            <img
+              class="profilepictures"
+              src="images/Sári-removebg-preview.png"
+              alt=""
+            />
           </div>
 
-          <h1 class="feature side">Veres Norbert</h1>
+          <h1 class="feature side">Sári</h1>
+          <p class="side">Mesterfodrász</p>
+          <div class="buttonholder">
+            <a href="https://n634317.yclients.com/">
+              <button class="btn btn-secondary">
+                <span>Időpontfoglalás</span>
+              </button>
+            </a>
+          </div>
+        </div>
+        <div class="worker-container">
+          <div class="pictureholder">
+            <img
+              class="profilepictures"
+              src="images/Krisz-removebg-preview.png"
+              alt=""
+            />
+          </div>
+
+          <h1 class="feature side">Krisz</h1>
           <p class="side">Mesterfodrász</p>
           <div class="buttonholder">
             <a href="https://n634317.yclients.com/">
