--- a/index.html
+++ b/index.html
@@ -64,14 +64,17 @@
           <div class="pictureholder">
             <img
               class="profilepictures"
-              src="images/Dominik-removebg-preview.png"
+              src="images/Krisz-removebg-preview.png"
               alt=""
             />
           </div>
-          <h1 class="feature side">Dominik</h1>
-          <p class="side">Mesterfodrász</p>
+
+          <h1 class="feature side">Lakóczy Krisztián</h1>
+          <p class="side">Borbély mester</p>
           <div class="buttonholder">
-            <a href="https://n634317.yclients.com/">
+            <a
+              href="https://n634317.yclients.com/company:599543?sdkudid=s1HdNQraJXZ1EcxNZfnm9mFGgbb9wepdee6VeVCJ&o=m1725632"
+            >
               <button class="btn btn-secondary">
                 <span>Időpontfoglalás</span>
               </button>
@@ -88,27 +91,29 @@
             />
           </div>
 
-          <h1 class="feature side">Sári</h1>
-          <p class="side">Mesterfodrász</p>
+          <h1 class="feature side">Tóth Sára</h1>
+          <p class="side">Borbély</p>
           <div class="buttonholder">
-            <a href="https://n634317.yclients.com/">
+            <a
+              href="https://n634317.yclients.com/company:599543?sdkudid=s1HdNQraJXZ1EcxNZfnm9mFGgbb9wepdee6VeVCJ&o=m1736710"
+            >
               <button class="btn btn-secondary">
                 <span>Időpontfoglalás</span>
               </button>
             </a>
           </div>
         </div>
+        <div class="separator"></div>
         <div class="worker-container">
           <div class="pictureholder">
             <img
               class="profilepictures"
-              src="images/Krisz-removebg-preview.png"
+              src="images/Dominik-removebg-preview.png"
               alt=""
             />
           </div>
-
-          <h1 class="feature side">Krisz</h1>
-          <p class="side">Mesterfodrász</p>
+          <h1 class="feature side">Búzás Dominik</h1>
+          <p class="side">Borbély mester</p>
           <div class="buttonholder">
             <a href="https://n634317.yclients.com/">
               <button class="btn btn-secondary">
@@ -117,6 +122,7 @@
             </a>
           </div>
         </div>
+
         <div class="group margin"></div>
         <div class="group margin"></div>
       </div>
