--- a/index.html
+++ b/index.html
@@ -84,11 +84,7 @@
         <div class="separator"></div>
         <div class="worker-container">
           <div class="pictureholder">
-            <img
-              class="profilepictures"
-              src="images/Sári-removebg-preview.png"
-              alt=""
-            />
+            <img class="profilepictures" src="images/sariremovebg.png" alt="" />
           </div>
 
           <h1 class="feature side">Tóth Sára</h1>
