--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="section" id="firstSection">
       <div class="flexcenter">
-        <h1 class="hero">BLOCK salon & barber shop</h1>
+        <h1 class="hero">FOGLALJ MOST</h1>
       </div>
       <div class="flexcenter">
         <a href="https://n634317.yclients.com/">
@@ -62,15 +62,11 @@
         <h1 id="barbers" name="barbers">Borbélyaink</h1>
         <div class="worker-container">
           <div class="pictureholder">
-            <img
-              class="profilepictures"
-              src="images/Krisz-removebg-preview.png"
-              alt=""
-            />
+            <img class="profilepictures" src="images/Krisz.jpeg" alt="" />
           </div>
 
           <h1 class="feature side">Lakóczy Krisztián</h1>
-          <p class="side">Borbély mester</p>
+          <p class="side">Borbély</p>
           <div class="buttonholder">
             <a
               href="https://n634317.yclients.com/company:599543?sdkudid=s1HdNQraJXZ1EcxNZfnm9mFGgbb9wepdee6VeVCJ&o=m1725632"
@@ -81,10 +77,9 @@
             </a>
           </div>
         </div>
-        <div class="separator"></div>
         <div class="worker-container">
           <div class="pictureholder">
-            <img class="profilepictures" src="images/sariremovebg.png" alt="" />
+            <img class="profilepictures" src="images/sari.jpeg" alt="" />
           </div>
 
           <h1 class="feature side">Tóth Sára</h1>
@@ -99,17 +94,12 @@
             </a>
           </div>
         </div>
-        <div class="separator"></div>
         <div class="worker-container">
           <div class="pictureholder">
-            <img
-              class="profilepictures"
-              src="images/Dominik-removebg-preview.png"
-              alt=""
-            />
+            <img class="profilepictures" src="images/Dominik.jpeg" alt="" />
           </div>
           <h1 class="feature side">Búzás Dominik</h1>
-          <p class="side">Borbély mester</p>
+          <p class="side">Borbély</p>
           <div class="buttonholder">
             <a href="https://n634317.yclients.com/">
               <button class="btn btn-secondary">
