--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html"
+      <a href="www.blockbarbershop.com"
         ><img
           class="logo-image"
           src="images/blocklogo-removebg-preview.png"
