--- a/index.html
+++ b/index.html
@@ -46,12 +46,9 @@
 
     <div class="section" id="firstSection">
       <div class="flexcenter">
-        <h1 class="hero">FOGLALJ MOST</h1>
-      </div>
-      <div class="flexcenter">
         <a href="https://n634317.yclients.com/">
           <button class="btn btn-primary">
-            <span>Időpontfoglalás</span>
+            <span>FOGLALJ MOST</span>
           </button>
         </a>
       </div>
