update prices plus style

--- a/galery.html
+++ b/galery.html
@@ -73,6 +73,9 @@
         </ul>
       </nav>
       <label for="nav-toggle" class="nav-toggle-label">
+        <div class="menu-btn">
+          <div class="menu-btn__burger"></div>
+        </div>
         <span></span>
       </label>
     </header>
@@ -176,6 +179,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="javascript.js"></script>
     <script
       type="text/javascript"
       src="https://w634317.yclients.com/widgetJS"
