--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           src="images/blocklogo-removebg-preview.png"
           alt=""
       /></a>
+
       <input type="checkbox" id="nav-toggle" class="nav-toggle" />
       <nav>
         <ul>
@@ -25,6 +26,9 @@
         </ul>
       </nav>
       <label for="nav-toggle" class="nav-toggle-label">
+        <div class="menu-btn">
+          <div class="menu-btn__burger"></div>
+        </div>
         <span></span>
       </label>
     </header>
