--- a/prices.html
+++ b/prices.html
@@ -25,6 +25,9 @@
         </ul>
       </nav>
       <label for="nav-toggle" class="nav-toggle-label">
+        <div class="menu-btn">
+          <div class="menu-btn__burger"></div>
+        </div>
         <span></span>
       </label>
     </header>
@@ -32,37 +35,29 @@
       <div class="container">
         <div class="grid-container">
           <div class="service-name"><h2>A hajvágás</h2></div>
-          <div class="service-price"><h2>4000 Ft</h2></div>
-          <div class="service-name"><h2>Egyhossz gépi hajvágás</h2></div>
-          <div class="service-price"><h2>2500 Ft</h2></div>
+          <div class="service-price"><h2>4700 Ft</h2></div>
           <div class="service-name">
             <h2>Gyerek hajvágás(10 éves korig)</h2>
           </div>
-          <div class="service-price"><h2>3000 Ft</h2></div>
+          <div class="service-price"><h2>3500 Ft</h2></div>
           <div class="service-name">
             <h2>Hajvágás + szakáll igazítás géppel</h2>
           </div>
-          <div class="service-price"><h2>5700 Ft</h2></div>
+          <div class="service-price"><h2>6300 Ft</h2></div>
           <div class="service-name">
             <h2>Hajvágás + szakáll igazítás géppel, pengével</h2>
           </div>
-          <div class="service-price"><h2>6200 Ft</h2></div>
-          <div class="service-name">
-            <h2>Hajvágás + szakáll igazítás géppel + szakáll festés</h2>
-          </div>
-          <div class="service-price"><h2>7500 Ft</h2></div>
+          <div class="service-price"><h2>6800 Ft</h2></div>
           <div class="service-name">
             <h2>Egyhossz hajvágás + szakáll igazítás géppel, pengével</h2>
           </div>
-          <div class="service-price"><h2>4800 Ft</h2></div>
+          <div class="service-price"><h2>6200 Ft</h2></div>
           <div class="service-name"><h2>Szakáll igazítás géppel</h2></div>
-          <div class="service-price"><h2>2000 Ft</h2></div>
+          <div class="service-price"><h2>2500 Ft</h2></div>
           <div class="service-name">
-            <h2>Szakáll igazítás géppel, pengével</h2>
+            <h2>Szakáll igazítás, borotválás</h2>
           </div>
-          <div class="service-price"><h2>2800 Ft</h2></div>
-          <div class="service-name"><h2>Őszfedés</h2></div>
-          <div class="service-price"><h2>2800 Ft</h2></div>
+          <div class="service-price"><h2>3400 Ft</h2></div>
         </div>
       </div>
     </div>
@@ -114,6 +109,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="javascript.js"></script>
     <script
       type="text/javascript"
       src="https://w634317.yclients.com/widgetJS"
