--- a/galery.html
+++ b/galery.html
@@ -179,7 +179,19 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="javascript.js"></script>
+    <script>
+      const menuBtn = document.querySelector(".menu-btn");
+      let menuOpen = false;
+      menuBtn.addEventListener("click", () => {
+        if (!menuOpen) {
+          menuBtn.classList.add("open");
+          menuOpen = true;
+        } else {
+          menuBtn.classList.remove("open");
+          menuOpen = false;
+        }
+      });
+    </script>
     <script
       type="text/javascript"
       src="https://w634317.yclients.com/widgetJS"
