--- a/prices.html
+++ b/prices.html
@@ -49,15 +49,15 @@
           </div>
           <div class="service-price"><h2>6800 Ft</h2></div>
           <div class="service-name">
-            <h2>Egyhossz hajvágás + szakáll igazítás géppel, pengével</h2>
+            <h2>Egyhossz hajvágás + szakáll igazítás,borotválás</h2>
           </div>
-          <div class="service-price"><h2>6200 Ft</h2></div>
+          <div class="service-price"><h2>5800 Ft</h2></div>
           <div class="service-name"><h2>Szakáll igazítás géppel</h2></div>
           <div class="service-price"><h2>2500 Ft</h2></div>
           <div class="service-name">
-            <h2>Szakáll igazítás, borotválás</h2>
+            <h2>Szakáll igazítás géppel, pengével</h2>
           </div>
-          <div class="service-price"><h2>3400 Ft</h2></div>
+          <div class="service-price"><h2>3200 Ft</h2></div>
         </div>
       </div>
     </div>
