--- a/prices.html
+++ b/prices.html
@@ -49,7 +49,7 @@
           </div>
           <div class="service-price"><h2>6800 Ft</h2></div>
           <div class="service-name">
-            <h2>Egyhossz hajvágás + szakáll igazítás,borotválás</h2>
+            <h2>Hajvágás + szakáll igazítás,borotválás</h2>
           </div>
           <div class="service-price"><h2>5800 Ft</h2></div>
           <div class="service-name"><h2>Szakáll igazítás géppel</h2></div>
