--- a/prices.html
+++ b/prices.html
@@ -36,6 +36,8 @@
         <div class="grid-container">
           <div class="service-name"><h2>A hajvágás</h2></div>
           <div class="service-price"><h2>4700 Ft</h2></div>
+          <div class="service-name"><h2>Egyhossz gépi hajvágás</h2></div>
+          <div class="service-price"><h2>3000 Ft</h2></div>
           <div class="service-name">
             <h2>Gyerek hajvágás(10 éves korig)</h2>
           </div>
@@ -43,7 +45,7 @@
           <div class="service-name">
             <h2>Hajvágás + szakáll igazítás géppel</h2>
           </div>
-          <div class="service-price"><h2>6300 Ft</h2></div>
+          <div class="service-price"><h2>5400 Ft</h2></div>
           <div class="service-name">
             <h2>Hajvágás + szakáll igazítás géppel, pengével</h2>
           </div>
