--- a/prices.html
+++ b/prices.html
@@ -47,10 +47,12 @@
       id="firstSection-price">
       <div class="container">
         <div class="grid-container">
-          <div class="service-name"><h2>A hajvágás</h2></div>
+          <div class="service-name"><h2>Férfi hajvágás</h2></div>
           <div class="service-price"><h2>5300 Ft</h2></div>
 
-          <div class="service-name"><h2>Egyhossz gépi hajvágás</h2></div>
+          <div class="service-name"
+            ><h2>Férfi hajvágás géppel, egy hosszra</h2></div
+          >
           <div class="service-price"><h2>3000 Ft</h2></div>
 
           <div class="service-name">
@@ -61,17 +63,17 @@
           <div class="service-name">
             <h2>Szakáll igazítás</h2>
           </div>
-          <div class="service-price"><h2>3200 Ft</h2></div>
+          <div class="service-price"><h2>3000 Ft</h2></div>
 
           <div class="service-name">
-            <h2>Hajvágás + szakáll igazítás</h2>
-          </div>
-          <div class="service-price"><h2>7300 Ft</h2></div>
-
-          <div class="service-name">
-            <h2>Egyhossz hajvágás + szakáll igazítás</h2>
+            <h2>Férfi hajvágás géppel, egy hosszra és szakáll igazítás</h2>
           </div>
           <div class="service-price"><h2>5900 Ft</h2></div>
+
+          <div class="service-name">
+            <h2>Férfi hajvágás és szakáll igazítás</h2>
+          </div>
+          <div class="service-price"><h2>7300 Ft</h2></div>
         </div>
       </div>
     </div>
