--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="javascript.js"></script>
-    <script
+    <script defer
       type="text/javascript"
       src="https://w634317.yclients.com/widgetJS"
       charset="UTF-8"
