--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h1 id="barbers" name="barbers">Borbélyaink</h1>
         <div class="worker-container">
           <div class="pictureholder">
-            <img class="profilepictures" src="images/sari.jpeg" alt="" />
+            <img class="profilepictures" src="images/sari.jpg" alt="" />
           </div>
 
           <h1 class="feature side">Tóth Sára</h1>
@@ -80,7 +80,7 @@
         </div>
         <div class="worker-container">
           <div class="pictureholder">
-            <img class="profilepictures" src="images/Dominik.jpeg" alt="" />
+            <img class="profilepictures" src="images/Dominik.jpg" alt="" />
           </div>
           <h1 class="feature side">Búzás Dominik</h1>
           <p class="side">Borbély</p>
@@ -159,7 +159,8 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="javascript.js"></script>
-    <script defer
+    <script
+      defer
       type="text/javascript"
       src="https://w634317.yclients.com/widgetJS"
       charset="UTF-8"
