--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       Developed by <span id="trademark">Golden Ratio Development Studio™</span>
     </div>
     <script
-      defer
+      async
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       referrerpolicy="no-referrer"
     ></script>
