--- a/prices.html
+++ b/prices.html
@@ -2,16 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      http-equiv="X-UA-Compatible"
-      content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Block Salon</title>
-    <link
-      rel="stylesheet"
-      href="style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -21,10 +15,7 @@
           src="images/blocklogo-removebg-preview.png"
           alt=""
       /></a>
-      <input
-        type="checkbox"
-        id="nav-toggle"
-        class="nav-toggle" />
+      <input type="checkbox" id="nav-toggle" class="nav-toggle" />
       <nav>
         <ul>
           <li id="workers"><a href="index.html#barbers">Borbélyaink</a></li>
@@ -33,26 +24,22 @@
           <li><a href="/galery">Galéria</a></li>
         </ul>
       </nav>
-      <label
-        for="nav-toggle"
-        class="nav-toggle-label">
+      <label for="nav-toggle" class="nav-toggle-label">
         <div class="menu-btn">
           <div class="menu-btn__burger"></div>
         </div>
         <span></span>
       </label>
     </header>
-    <div
-      class="section"
-      id="firstSection-price">
+    <div class="section" id="firstSection-price">
       <div class="container">
         <div class="grid-container">
           <div class="service-name"><h2>Férfi hajvágás</h2></div>
           <div class="service-price"><h2>5300 Ft</h2></div>
 
-          <div class="service-name"
-            ><h2>Férfi hajvágás géppel, egy hosszra</h2></div
-          >
+          <div class="service-name">
+            <h2>Férfi hajvágás géppel, egy hosszra</h2>
+          </div>
           <div class="service-price"><h2>3000 Ft</h2></div>
 
           <div class="service-name">
@@ -93,7 +80,8 @@
                 frameborder="0"
                 scrolling="no"
                 marginheight="0"
-                marginwidth="0"></iframe
+                marginwidth="0"
+              ></iframe
               ><a href="https://putlocker-is.org">putlocker</a><br /><style>
                 .mapouter {
                   position: relative;
@@ -121,24 +109,28 @@
       Developed by <span id="trademark">Golden Ratio Development Studio™</span>
     </div>
     <script
+      async
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-      referrerpolicy="no-referrer"></script>
+      referrerpolicy="no-referrer"
+    ></script>
     <script>
-      const menuBtn = document.querySelector('.menu-btn');
+      const menuBtn = document.querySelector(".menu-btn");
       let menuOpen = false;
-      menuBtn.addEventListener('click', () => {
+      menuBtn.addEventListener("click", () => {
         if (!menuOpen) {
-          menuBtn.classList.add('open');
+          menuBtn.classList.add("open");
           menuOpen = true;
         } else {
-          menuBtn.classList.remove('open');
+          menuBtn.classList.remove("open");
           menuOpen = false;
         }
       });
     </script>
     <script
+      defer
       type="text/javascript"
       src="https://w634317.yclients.com/widgetJS"
-      charset="UTF-8"></script>
+      charset="UTF-8"
+    ></script>
   </body>
 </html>
