--- a/galery.html
+++ b/galery.html
@@ -164,6 +164,7 @@
       Developed by <span id="trademark">Golden Ratio Development Studio™</span>
     </div>
     <script
+      async
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       referrerpolicy="no-referrer"
     ></script>
@@ -181,6 +182,7 @@
       });
     </script>
     <script
+      defer
       type="text/javascript"
       src="https://w634317.yclients.com/widgetJS"
       charset="UTF-8"
