--- a/index.html
+++ b/index.html
@@ -61,40 +61,38 @@
     <div id="workers" name="workers" class="section">
       <div class="container">
         <h1 id="barbers" name="barbers">Borbélyaink</h1>
-        <div class="worker-container">
-          <div class="pictureholder">
-            <img class="profilepictures" src="images/sari.jpg" alt="" />
+        <div class="flex-pic">
+          <div class="worker-container">
+            <div class="pictureholder">
+              <img class="profilepictures" src="images/sari.jpg" alt="" />
+            </div>
+            <h1 class="feature side">Tóth Sára</h1>
+            <p class="side">Borbély</p>
+            <div class="buttonholder">
+              <a
+                href="https://n634317.yclients.com/company:599543?sdkudid=s1HdNQraJXZ1EcxNZfnm9mFGgbb9wepdee6VeVCJ&o=m1736710"
+              >
+                <button class="btn btn-secondary">
+                  <span>Időpontfoglalás</span>
+                </button>
+              </a>
+            </div>
           </div>
-
-          <h1 class="feature side">Tóth Sára</h1>
-          <p class="side">Borbély</p>
-          <div class="buttonholder">
-            <a
-              href="https://n634317.yclients.com/company:599543?sdkudid=s1HdNQraJXZ1EcxNZfnm9mFGgbb9wepdee6VeVCJ&o=m1736710"
-            >
-              <button class="btn btn-secondary">
-                <span>Időpontfoglalás</span>
-              </button>
-            </a>
+          <div class="worker-container">
+            <div class="pictureholder">
+              <img class="profilepictures" src="images/Dominik.jpg" alt="" />
+            </div>
+            <h1 class="feature side">Búzás Dominik</h1>
+            <p class="side">Borbély</p>
+            <div class="buttonholder">
+              <a href="https://n634317.yclients.com/">
+                <button class="btn btn-secondary">
+                  <span>Időpontfoglalás</span>
+                </button>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="worker-container">
-          <div class="pictureholder">
-            <img class="profilepictures" src="images/Dominik.jpg" alt="" />
-          </div>
-          <h1 class="feature side">Búzás Dominik</h1>
-          <p class="side">Borbély</p>
-          <div class="buttonholder">
-            <a href="https://n634317.yclients.com/">
-              <button class="btn btn-secondary">
-                <span>Időpontfoglalás</span>
-              </button>
-            </a>
-          </div>
-        </div>
-
-        <div class="group margin"></div>
-        <div class="group margin"></div>
       </div>
     </div>
     <div id="connect" name="connect" class="section bg">
